--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,16 @@
 FROM continuumio/miniconda3
 
-WORKDIR /app
+WORKDIR /app2
 
 COPY environment.yml .
 
 RUN conda env create -f environment.yml
 
-RUN echo "conda activate myenv" >> ~/.bashrc
+SHELL ["conda", "run", "-n", "llamitai", "/bin/bash", "-c"]
 
 COPY my_LLM.py ./
 COPY streamlit.py ./
 
 EXPOSE 8501
 
-ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "myenv", "streamlit", "run", "streamlit.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["conda", "run", "--no-capture-output", "-n", "llamitai", "streamlit", "run", "streamlit.py", "--server.address=0.0.0.0"]
