--- a/environment.yml
+++ b/environment.yml
@@ -30,46 +30,104 @@ dependencies:
   - zlib=1.2.13=h5eee18b_1
   - pip:
       - altair==5.5.0
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
+      - asttokens==3.0.0
+      - async-lru==2.0.4
+      - babel==2.17.0
+      - bleach==6.2.0
       - blinker==1.9.0
       - certifi==2025.1.31
       - chardet==5.2.0
       - click==8.1.8
+      - comm==0.2.2
+      - debugpy==1.8.12
+      - decorator==5.2.1
+      - defusedxml==0.7.1
       - distro==1.9.0
+      - executing==2.2.0
+      - fastjsonschema==2.21.1
+      - fqdn==1.5.1
       - gitdb==4.0.12
       - gitpython==3.1.44
       - idna==3.10
+      - ipykernel==6.29.5
+      - ipython==8.32.0
+      - isoduration==20.11.0
+      - jedi==0.19.2
       - jiter==0.8.2
+      - json5==0.10.0
       - jsonschema==4.23.0
       - jsonschema-specifications==2024.10.1
+      - jupyter-client==8.6.3
+      - jupyter-core==5.7.2
+      - jupyter-events==0.12.0
+      - jupyter-lsp==2.2.5
+      - jupyter-server==2.15.0
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.3.5
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.3
       - langchain-chroma==0.2.2
+      - langchain-community==0.3.18
       - langchain-core==0.3.40
       - langchain-deepseek==0.1.2
       - langchain-ollama==0.2.3
       - langchain-openai==0.3.7
+      - langchain-text-splitters==0.3.6
       - langgraph==0.2.74
       - langgraph-checkpoint==2.0.16
       - langgraph-sdk==0.1.53
       - markupsafe==3.0.2
+      - matplotlib-inline==0.1.7
+      - mistune==3.1.2
       - monotonic==1.6
       - msgpack==1.1.0
       - narwhals==1.28.0
+      - nbclient==0.10.2
+      - nbconvert==7.16.6
+      - nbformat==5.10.4
+      - notebook==7.3.2
+      - notebook-shim==0.2.4
       - olefile==0.47
       - ollama==0.4.7
       - openai==1.64.0
+      - pandocfilters==1.5.1
+      - parso==0.8.4
+      - pexpect==4.9.0
+      - platformdirs==4.3.6
+      - prometheus-client==0.21.1
+      - prompt-toolkit==3.0.50
       - psutil==7.0.0
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.3
       - pyarrow==19.0.1
       - pydeck==0.9.1
       - pyparsing==3.2.1
+      - python-json-logger==3.2.1
       - pytz==2025.1
+      - pyzmq==26.2.1
       - referencing==0.36.2
       - requests==2.32.3
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
       - rpds-py==0.23.1
+      - send2trash==1.8.3
       - six==1.17.0
       - smmap==5.0.2
+      - stack-data==0.6.3
       - streamlit==1.42.2
+      - terminado==0.18.1
       - tiktoken==0.9.0
+      - tinycss2==1.4.0
       - toml==0.10.2
       - tornado==6.4.2
+      - traitlets==5.14.3
+      - types-python-dateutil==2.9.0.20241206
+      - uri-template==1.3.0
       - urllib3==2.3.0
       - watchdog==6.0.0
+      - wcwidth==0.2.13
+      - webcolors==24.11.1
 prefix: /home/daguill/miniconda3/envs/llamitai
