--- a/environment.yml
+++ b/environment.yml
@@ -125,6 +125,7 @@ dependencies:
       - tornado==6.4.2
       - traitlets==5.14.3
       - types-python-dateutil==2.9.0.20241206
+      - unstructured==0.16.23
       - uri-template==1.3.0
       - urllib3==2.3.0
       - watchdog==6.0.0
